--- a/presentation_editor/src/common/InputField/InputField.module.css
+++ b/presentation_editor/src/common/InputField/InputField.module.css
@@ -1,7 +1,8 @@
 .field {
   border-radius: 4px;
   height: 40px;
-  font-family: "Helvetica", "sans-serif";
+  width: 150px;
+  font-family: 'Helvetica', 'sans-serif';
   font-size: 14px;
   background-color: #f4f4fa;
   border: 2px solid #000;
