--- a/presentation_editor/src/view/Toolbar/Toolbar.module.css
+++ b/presentation_editor/src/view/Toolbar/Toolbar.module.css
@@ -11,10 +11,9 @@
 .section {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 10px;
+  gap: 5px;
   border-right: 1px solid #c0c0c8;
-  padding: 10px 30px 10px 30px;
+  padding: 10px;
   height: 100px;
   flex-wrap: wrap;
   margin: 10px 0 10px 0;
@@ -22,4 +21,8 @@
 
 .section:last-child {
   border-right: none;
+}
+
+.buttonContainer {
+  display: flex;
 }
