--- a/presentation_editor/src/common/InputField/InputField.module.css
+++ b/presentation_editor/src/common/InputField/InputField.module.css
@@ -1,7 +1,11 @@
+.form {
+  width: 100%;
+}
+
 .field {
   border-radius: 4px;
   height: 40px;
-  width: 130px;
+  width: 100%;
   font-family: 'Helvetica', 'sans-serif';
   font-size: 14px;
   background-color: #f4f4fa;
