--- a/presentation_editor/src/common/Select/Select.module.css
+++ b/presentation_editor/src/common/Select/Select.module.css
@@ -1,11 +1,11 @@
 .select {
   border-radius: 4px;
   height: 40px;
+  width: 100%;
   font-family: "Helvetica", "sans-serif";
   font-size: 14px;
   background-color: #f4f4fa;
   border: 2px solid #000;
   box-sizing: border-box;
   padding: 5px;
-  width: 130px;
 }
