--- a/presentation_editor/src/view/Toolbar/Toolbar.module.css
+++ b/presentation_editor/src/view/Toolbar/Toolbar.module.css
@@ -12,12 +12,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
+  flex-direction: column;
+  gap: 8px;
   border-right: 1px solid #c0c0c8;
-  padding: 10px;
+  padding: 0 10px;
   height: 100px;
   flex-wrap: wrap;
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
 }
 
 .section:last-child {
@@ -26,5 +27,5 @@
 
 .buttonContainer {
   display: flex;
-  gap: 5px;
+  gap: 8px;
 }
