--- a/presentation_editor/src/App.module.css
+++ b/presentation_editor/src/App.module.css
@@ -20,6 +20,7 @@
   width: 100%;
   position: relative;
   padding: 30px 24px 60px;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: auto;
   box-sizing: border-box;
 }
