--- a/presentation_editor/src/view/SlideThumbnail/SlideThumbnail.module.css
+++ b/presentation_editor/src/view/SlideThumbnail/SlideThumbnail.module.css
@@ -4,7 +4,7 @@
   position: relative;
   background-color: #fff;
   border-radius: 7px;
-  border: 2px solid #fff;
+  border: 2px solid transparent;
 }
 
 .selected {
