--- a/presentation_editor/src/view/SlideThumbnail/SlideThumbnail.module.css
+++ b/presentation_editor/src/view/SlideThumbnail/SlideThumbnail.module.css
@@ -4,10 +4,11 @@
   position: relative;
   background-color: #fff;
   border-radius: 7px;
-  border: 2px solid transparent;
+  border: 2px solid #ccccd8;
   overflow: hidden;
 }
 
 .selected {
   border: 2px solid #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
 }
