--- a/presentation_editor/src/common/ButtonSmall/ButtonSmall.module.css
+++ b/presentation_editor/src/common/ButtonSmall/ButtonSmall.module.css
@@ -8,7 +8,7 @@
   gap: 8px;
   font-size: 12px;
   border: none;
-  background-color: #fff;
+  background-color: transparent;
   cursor: pointer;
 }
 
