--- a/presentation_editor/src/common/DropdownMenu/DropdownMenu.module.css
+++ b/presentation_editor/src/common/DropdownMenu/DropdownMenu.module.css
@@ -5,12 +5,13 @@
 .dropdownMenu {
     position: absolute;
     border-radius: 4px;
-    border: 2px solid #000;
-    padding: 10px;
+    padding: 15px;
     top: 130%;
-    background-color: #fff;
     display: flex;
     flex-direction: column;
     gap: 10px;
     z-index: 2;
+    background-color: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
