--- a/presentation_editor/src/common/Select/Select.module.css
+++ b/presentation_editor/src/common/Select/Select.module.css
@@ -5,7 +5,7 @@
   font-family: "Helvetica", "sans-serif";
   font-size: 14px;
   background-color: #f4f4fa;
-  border: 2px solid #000;
+  border: 2px solid #ccccd8;
   box-sizing: border-box;
   padding: 5px;
 }
