--- a/presentation_editor/src/common/Select/Select.module.css
+++ b/presentation_editor/src/common/Select/Select.module.css
@@ -2,7 +2,7 @@
   border-radius: 4px;
   height: 40px;
   width: 100%;
-  font-family: "Helvetica", "sans-serif";
+  font-family: Helvetica, sans-serif;
   font-size: 14px;
   background-color: #f4f4fa;
   border: 2px solid #ccccd8;
