--- a/presentation_editor/src/view/NoSlidesPlaceholder/NoSlidesPlaceholder.module.css
+++ b/presentation_editor/src/view/NoSlidesPlaceholder/NoSlidesPlaceholder.module.css
@@ -8,6 +8,6 @@
   background-color: #e9e9f0;
   border-radius: 7px;
   border: 2px solid #000;
-  font-family: "Helvetica", "sans-serif";
+  font-family: Helvetica, sans-serif;
   font-size: 30px;
 }
