--- a/presentation_editor/src/App.module.css
+++ b/presentation_editor/src/App.module.css
@@ -1,11 +1,13 @@
 .page {
   --toolbar-offset: 120px;
+  
   margin: 0;
   display: flex;
   flex-direction: column;
   background-color: #e9e9f0;
   min-height: 100vh;
 }
+
 .main {
   display: flex;
   margin-top: var(--toolbar-offset);
@@ -20,7 +22,6 @@
   width: 100%;
   position: relative;
   padding: 30px 24px 60px;
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow: auto;
   box-sizing: border-box;
 }
