--- a/presentation_editor/src/common/DropdownMenu/DropdownMenu.module.css
+++ b/presentation_editor/src/common/DropdownMenu/DropdownMenu.module.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     gap: 10px;
     z-index: 2;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgb(255 255 255 / 40%);
     backdrop-filter: blur(10px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 10px rgb(0 0 0 / 30%);
 }
