--- a/presentation_editor/src/common/InputField/InputField.module.css
+++ b/presentation_editor/src/common/InputField/InputField.module.css
@@ -1,7 +1,7 @@
 .field {
   border-radius: 4px;
   height: 40px;
-  width: 100%;
+  width: 130px;
   font-family: Helvetica, sans-serif;
   font-size: 14px;
   background-color: #f4f4fa;
