--- a/presentation_editor/src/view/ImageObject/ImageObject.module.css
+++ b/presentation_editor/src/view/ImageObject/ImageObject.module.css
@@ -1,8 +1,8 @@
-.image {
+.imageContainer {
   position: absolute;
-  border: 2px solid transparent;
 }
 
-.selected {
-  border: 2px solid #007bff;
+.image {
+  height: 100%;
+  width: 100%;
 }
