--- a/presentation_editor/src/view/SelectionFrame/SelectionFrame.module.css
+++ b/presentation_editor/src/view/SelectionFrame/SelectionFrame.module.css
@@ -45,7 +45,8 @@
     width: 8px;
     height: 8px;
     background-color: #fff;
-    border: 2px solid #007bff;
+    border: 3px solid #007bff;
+    border-radius: 100%;
     z-index: 1000;
     pointer-events: all;
 }
